--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "initai-dev-server": "^0.4.8",
     "initai-node": "~0.0.7"
+"$ nvm install 4.3.2"
+"$ nvm use 4.3.2"
   }
 }
-$ nvm install 4.3.2
-$ nvm use 4.3.2
